# RawEditor

./: .gitignore  Cargo.toml  README.md  SPLASH_SETUP.md
src/: color.rs  main.rs
src/gpu/: mod.rs  pipeline.rs  shaders.rs
src/raw/: loader.rs  mod.rs  preview.rs  processor.rs  thumbnail.rs
src/state/: data.rs  edit.rs  library.rs  mod.rs
src/ui/: canvas.rs  histogram.rs  mod.rs
