[package]
name = "raw-editor"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A blazing-fast, native RAW photo editor"
license = "MIT"

[dependencies]
# GUI framework with native rendering via wgpu
iced = { version = "0.13", features = ["wgpu", "tokio", "advanced"] }

[profile.release]
# Maximum performance optimizations
opt-level = 3
lto = true
codegen-units = 1
strip = true
