[package]
name = "raw-editor"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A blazing-fast, native RAW photo editor"
license = "MIT"

[dependencies]
# GUI framework with native rendering via wgpu
iced = { version = "0.13", features = ["wgpu", "tokio", "advanced"] }

# Additional widgets for iced (Wrap for grid layout)
iced_aw = { version = "0.10", default-features = false, features = ["wrap"] }

# Database for catalog management (bundled = includes SQLite, no system dependency)
rusqlite = { version = "0.32", features = ["bundled"] }

# Standard library for paths and directories
dirs = "5.0"

# Native file/folder picker dialogs
rfd = "0.14"

# Recursive directory traversal
walkdir = "2.4"

# Better error handling with derive macros
thiserror = "1.0"

# Date and time utilities
chrono = "0.4"

# RAW image decoding (extract embedded JPEGs)
rawloader = "0.37"

# Image processing (decode, resize, save thumbnails)
image = "0.25"

# System cache directory detection
dirs-next = "2.0"

[profile.release]
# Maximum performance optimizations
opt-level = 3
lto = true
codegen-units = 1
strip = true
