[package]
name = "raw-editor"
version = "0.0.6"
edition = "2021"
authors = ["Ayman REBAI <ayman.rebai@gmail.com>"]
description = "A blazing-fast, native RAW photo editor"
license = "MIT"

[dependencies]
# GUI framework with native rendering via wgpu
iced = { version = "0.13", features = ["wgpu", "tokio", "image", "advanced", "canvas"] }
iced_wgpu = "0.13"  # Direct access to wgpu types from iced

# Additional widgets for iced (Wrap for grid layout)
iced_aw = { version = "0.10", default-features = false, features = ["wrap"] }

# Async runtime for background tasks
tokio = { version = "1", features = ["rt", "fs"] }

# Database for catalog management (bundled = includes SQLite, no system dependency)
rusqlite = { version = "0.32", features = ["bundled"] }

# Standard library for paths and directories
dirs = "5.0"

# Native file/folder picker dialogs
rfd = "0.14"

# Recursive directory traversal
walkdir = "2.4"

# Better error handling with derive macros
thiserror = "1.0"

# Date and time utilities
chrono = "0.4"

# Serialization for edit parameters (save/load to JSON)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# RAW image decoding - raw sensor data access
rawloader = "0.37"

# GPU rendering for real-time RAW processing (use iced's wgpu)
bytemuck = { version = "1.14", features = ["derive"] }

# Matrix math for color space conversions (Phase 15)
cgmath = "0.18"

# Image processing (decode, resize, save thumbnails)
image = "0.25"

# System cache directory detection
dirs-next = "2.0"

[profile.release]
# Maximum performance optimizations
opt-level = 3
lto = true
codegen-units = 1
strip = true
